<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeproActivia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Поздравляю! Вы выиграли АВТОМОБИЛЬ! Но чтобы его получить, необходимо отослать СМС&#8230; Тьфу, то есть активироваться. Тыкай прикольную кнопку ниже и АКТИВИРУЙСЯ!</string>
    <string name="button">Прикольная кнопка</string>
    <string name="logout">Волшебная кнопка</string>
    <string name="hurray" formatted="false">Всё получилось, %username%!\nА теперь - ДИСКОТЕКА!</string>
    <string name="deactivate">Кстати, ещё можно деактивироваться, например. Для этого чуть ниже есть волшебная кнопка. Её можно потыкать.</string>
    <string name="progress_title">Взжзжжж&#8230;</string>
    <string name="progress_text">Пущь-пущь-пущь!!111</string>
    <string name="khoouy">Хуй!</string>

</resources>