<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <LinearLayout android:id="@+id/intro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView android:id="@+id/text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/hello_world"
	        android:textSize="18sp" />

	    <Button android:id="@+id/button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="@dimen/activity_vertical_margin" />

	</LinearLayout>
	
    <WebView android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    
    <LinearLayout android:id="@+id/hurray_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

	    <TextView android:id="@+id/hurray"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hurray"
	        android:textSize="20sp"
	        android:gravity="center_horizontal" />

	    <TextView android:id="@+id/deactivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deactivate"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

	    <Button android:id="@+id/logout"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

    </LinearLayout>

</LinearLayout>